change dbconnexion string

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,7 +1,7 @@
 {
 
   "CartoDb": {
-    "ConnectionString": "mongodb://localhost:27017",
+    "ConnectionString": "mongodb://root:Orange19@172.26.76.96:30722?authMechanism=DEFAULT&authSource=admin&directConnection=true&ssl=false&replicaSet=atlas-5r6qbu-shard-0&retryWrites=true&w=majority",
     "DatabaseName": "cartodb",
     "ActifCollectionName": "Actifs",
     "TypeElementCollectionName": "TypeElements",
