--- a/ApiCartobani/src/ApiCartobani/appsettings.json
+++ b/ApiCartobani/src/ApiCartobani/appsettings.json
@@ -1,3 +1,18 @@
 {
   "AllowedHosts": "*",
+
+  "CartobaniDb": {
+    //"ConnectionString": "mongodb://root:Orange19@172.26.76.96:30722",
+    "ConnectionString": "mongodb://localhost:27017",
+    "DatabaseName": "cartodb",
+    "ActifCollectionName": "Actifs",
+    "TypeElementCollectionName": "TypeElements",
+    "DACollectionName": "DAs",
+    "FluxCollectionName": "Flux",
+    "IconeCollectionName": "Icones",
+    "EnvironnementCollectionName": "Environnements",
+    "RoleCollectionName": "Roles"
+
+  }
 }
+
