--- a/ApiCartobani/tests/ApiCartobani.SharedTestHelpers/ApiCartobani.SharedTestHelpers.csproj
+++ b/ApiCartobani/tests/ApiCartobani.SharedTestHelpers/ApiCartobani.SharedTestHelpers.csproj
@@ -9,7 +9,11 @@
     <PackageReference Include="Ardalis.SmartEnum" Version="2.1.0" />
     <PackageReference Include="AutoBogusLifesupport" Version="2.14.0" />
     <PackageReference Include="Bogus" Version="34.0.2" />
+    <PackageReference Include="EntityFramework" Version="6.4.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="6.0.10" />
+    <PackageReference Include="MongoDB.Driver" Version="2.19.2" />
+    <PackageReference Include="MongoDB.Driver.Core" Version="2.19.2" />
+    <PackageReference Include="MongoFramework" Version="0.28.1" />
     <PackageReference Include="Moq" Version="4.18.2" />
   </ItemGroup>
 
